Fixed white space under editor

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -144,6 +144,7 @@ h4 {
     right: 0;
     bottom: 0;
     left: 0;
+    margin: 0;
 }
 
 .ace_active-line {
